# RunePipeline

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
data/: compounds.json  idioms.json  lexicon.json
src/: IdiomLookup.cpp  IdiomLookup.h  Lexicon.cpp  Lexicon.h  Pipeline.cpp  Pipeline.h  RuneMapper.cpp  RuneMapper.h  SemanticDecomposer.cpp  SemanticDecomposer.h  Server.cpp  Server.h  SoundChangeEngine.cpp  SoundChangeEngine.h  main.cpp  version.h
ui/: index.html
